redhat.mdita.dtd/test/negative/neg_fn.dita
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE topic PUBLIC "-//RED HAT//DTD MDITA 2.0 Topic//EN" "mditaTopic.dtd">
<topic id="test-fn">
  <title>Footnote test</title>
  <body>
    <p>Text with a footnote<fn>This is a footnote.</fn>.</p>
  </body>
</topic>
